# template-python

./: .coveragerc  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
hoge/math/: my_math.py
tests/: test_my_math.py
