[tool.poetry]
name = "hoge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
maintainers = ["Your Name <you@example.com>"]
readme = "README.md"
repository = "https://github.com/"
packages = [{ include = "hoge" }]

[tool.poetry.dependencies]
pydantic = "^2.0.1"
python = "^3.11"
python-dotenv-vault = "^0.6.0"
rich = "^13.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.7"
mypy = "^1.4.1"
pdoc3 = "^0.10.0"
pytest = "^7.4.0"
pytest-sugar = "^0.9.7"
ruff = "^0.0.277"
tox = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
